[gd_scene load_steps=43 format=3 uid="uid://di4r6bs6yv2t2"]

[ext_resource type="Script" uid="uid://dlpnxtww0wnpp" path="res://entities/characters/player/player.gd" id="1_abrql"]
[ext_resource type="Texture2D" uid="uid://c75tjlae6g73b" path="res://entities/characters/player/SpriteSheet.png" id="1_symyc"]
[ext_resource type="Script" uid="uid://ck546dr231fd3" path="res://shared/state_machine/state_machine.gd" id="3_8fjmc"]
[ext_resource type="PackedScene" uid="uid://cv0aed03g6xko" path="res://shared/combat/hurt_box.tscn" id="3_qiwj3"]
[ext_resource type="Script" uid="uid://cfwld0iinr84r" path="res://shared/states/idle.gd" id="4_qiwj3"]
[ext_resource type="Script" uid="uid://brlv8wvp4aehp" path="res://shared/states/walk.gd" id="5_26q78"]
[ext_resource type="Script" uid="uid://ycabutn6ry65" path="res://shared/states/attack.gd" id="6_bectd"]
[ext_resource type="PackedScene" uid="uid://b2hs4ton400b4" path="res://entities/weapons/projectile_weapon.tscn" id="8_26q78"]
[ext_resource type="Script" uid="uid://yxmbo22r17ww" path="res://shared/states/shoot_projectile.gd" id="9_bectd"]
[ext_resource type="PackedScene" uid="uid://dvn7w24ieqoc6" path="res://entities/projectiles/shuriken/shuriken_projectile.tscn" id="10_wvtmh"]
[ext_resource type="Script" uid="uid://vlpyllrtqxqb" path="res://shared/health/health.gd" id="11_0s3gd"]
[ext_resource type="Script" uid="uid://bylt2h5v53gu3" path="res://shared/combat/spells/spell_manager.gd" id="11_5otfs"]
[ext_resource type="Script" uid="uid://3ge5ncclvplv" path="res://shared/states/hit.gd" id="11_mnavw"]
[ext_resource type="Script" uid="uid://c36tcre2mg6ao" path="res://shared/states/death.gd" id="12_nuxbo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_221hk"]
atlas = ExtResource("1_symyc")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghoj8"]
atlas = ExtResource("1_symyc")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1t22"]
atlas = ExtResource("1_symyc")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_50fht"]
atlas = ExtResource("1_symyc")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_abrql"]
atlas = ExtResource("1_symyc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sglur"]
atlas = ExtResource("1_symyc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bls4j"]
atlas = ExtResource("1_symyc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkugw"]
atlas = ExtResource("1_symyc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjmc"]
atlas = ExtResource("1_symyc")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwj3"]
atlas = ExtResource("1_symyc")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_26q78"]
atlas = ExtResource("1_symyc")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bectd"]
atlas = ExtResource("1_symyc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvtmh"]
atlas = ExtResource("1_symyc")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7thud"]
atlas = ExtResource("1_symyc")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qjk"]
atlas = ExtResource("1_symyc")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ovn"]
atlas = ExtResource("1_symyc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afbqv"]
atlas = ExtResource("1_symyc")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx6sm"]
atlas = ExtResource("1_symyc")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqrof"]
atlas = ExtResource("1_symyc")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wlsy"]
atlas = ExtResource("1_symyc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2kln"]
atlas = ExtResource("1_symyc")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0b7"]
atlas = ExtResource("1_symyc")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtric"]
atlas = ExtResource("1_symyc")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyb6c"]
atlas = ExtResource("1_symyc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sfv1e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_221hk")
}],
"loop": false,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghoj8")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1t22")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50fht")
}],
"loop": false,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abrql")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sglur")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bls4j")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_221hk")
}],
"loop": false,
"name": &"shoot_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghoj8")
}],
"loop": false,
"name": &"shoot_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1t22")
}],
"loop": false,
"name": &"shoot_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50fht")
}],
"loop": false,
"name": &"shoot_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26q78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bectd")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvtmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7thud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ovn")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afbqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx6sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqrof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wlsy")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2kln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtric")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyb6c")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfv1e"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sybl7"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvtmh"]
size = Vector2(10, 10)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
collision_mask = 5
motion_mode = 1
script = ExtResource("1_abrql")
speed = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sfv1e")
animation = &"idle_down"
autoplay = "idle_down"
offset = Vector2(0, -3)

[node name="WorldCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_sfv1e")

[node name="HurtBox" parent="." instance=ExtResource("3_qiwj3")]
collision_mask = 8

[node name="HurtBoxCollision" parent="HurtBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_sybl7")

[node name="ProjectileWeapon" parent="." instance=ExtResource("8_26q78")]

[node name="InteractionArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="InteractionCollision" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_wvtmh")
debug_color = Color(0.906036, 0.828078, 1.92523e-06, 0.42)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_8fjmc")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_qiwj3")
metadata/_custom_type_script = "uid://cfwld0iinr84r"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_26q78")
metadata/_custom_type_script = "uid://brlv8wvp4aehp"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_bectd")
metadata/_custom_type_script = "uid://ycabutn6ry65"

[node name="ShootProjectile" type="Node" parent="StateMachine"]
script = ExtResource("9_bectd")
projectile = ExtResource("10_wvtmh")

[node name="Hit" type="Node" parent="StateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("11_mnavw")
next_state = NodePath("../Idle")
metadata/_custom_type_script = "uid://3ge5ncclvplv"

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("12_nuxbo")
metadata/_custom_type_script = "uid://c36tcre2mg6ao"

[node name="Health" type="Node" parent="."]
script = ExtResource("11_0s3gd")
max_health = 100.0
metadata/_custom_type_script = "uid://vlpyllrtqxqb"

[node name="SpellManager" type="Node" parent="."]
script = ExtResource("11_5otfs")
metadata/_custom_type_script = "uid://bylt2h5v53gu3"

[connection signal="damaged" from="HurtBox" to="." method="_on_hurt_box_damaged"]

[editable path="HurtBox"]
